# fusion-engine-client

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  WORKSPACE
.clwb/: .bazelproject
.github/: pull_request_template.md
.github/workflows/: codeql.yml  notify-docs-on-release.yml  release_build.yml
cpp/: BUILD
cpp/point_one/common/: BUILD  portability.h
cpp/point_one/messages/: BUILD  solution.h  utils.cc  utils.h
docs/: DoxygenLayout.xml  doxy_footer.html  doxy_header.html  doxy_style.css  error.html  include_header.js.template  index.dox  index.html  update_versions.py  versions.html.template
examples/: BUILD  CMakeLists.txt  WORKSPACE
examples/common/: BUILD  CMakeLists.txt  print_message.cc  print_message.h  time_provider.cc  time_provider.h
examples/convert_time/: BUILD  CMakeLists.txt  convert_time.cc
examples/cpp/: BUILD  WORKSPACE
examples/cpp/message_decode/: BUILD  message_decode.cc
examples/external_cmake_project/: CMakeLists.txt  main.cc
examples/generate_data/: BUILD  CMakeLists.txt  generate_data.cc
examples/lband_decode/: BUILD  CMakeLists.txt  lband_decode.cc
examples/message_decode/: BUILD  CMakeLists.txt  example_data.p1bin  message_decode.cc
examples/raw_message_decode/: BUILD  CMakeLists.txt  raw_message_decode.cc
examples/request_version/: BUILD  CMakeLists.txt  request_version.cc
examples/tcp_client/: BUILD  CMakeLists.txt  linux_tcp_client.cc  tcp_client.cc
examples/udp_client/: BUILD  CMakeLists.txt  linux_udp_client.cc
point_one/messages/: core.h  defs.h
python/: .pep8  README.md  requirements-dev.txt  requirements.txt  setup.py
python/examples/: analyze_data.py  binary_message_decode.py  client_implementation.py  encode_data.py  encode_message.py  extract_imu_data.py  extract_position_data.py  extract_satellite_info.py  extract_vehicle_speed_data.py  extract_wheel_speed_data.py  manual_message_decode.py  manual_tcp_client.py  message_decode.py  pose_relay.py  proxy_wheel_speed.py  raw_message_decode.py  raw_tcp_client.py  send_command.py  send_vehicle_speed.py  serial_client.py  tcp_client.py  udp_client.py
python/fusion_engine_client/: __init__.py
python/fusion_engine_client/analysis/: analyzer.py  attitude.py  data_loader.py  file_index.py  file_reader.py  plotly_data_support.js  pose_compare.py  reference.py
python/fusion_engine_client/applications/: import_utils.py  p1_capture.py  p1_display.py  p1_drive_analysis.py  p1_dump_input.py  p1_dump_p1bin.py  p1_dump_pcap.py  p1_dump_storage.py  p1_extract.py  p1_filter.py  p1_lband_extract.py  p1_plot_host_timing.py  p1_pose_compare.py  p1_print.py
python/fusion_engine_client/messages/: __init__.py  configuration.py  control.py  core.py  decoder.py  defs.py  device.py  fault_control.py  gnss_corrections.py  internal.py  measurement_details.py  measurements.py  ros.py  signal_def_gen.py  signal_defs.py  solution.py  sta5635.py  timestamp.py
python/fusion_engine_client/messages/internal/: __init__.py  config_and_control.py  control.py  device.py  internal_defs.py  measurements.py  platform_storage.py  playback_logging.py  profiling.py
python/fusion_engine_client/parsers/: __init__.py  decoder.py  encoder.py  fast_indexer.py  file_index.py  host_time_byte_mapper.py  mixed_log_reader.py
python/fusion_engine_client/utils/: argument_parser.py  bin_utils.py  construct_utils.py  dump_p1bin.py  enum_utils.py  log.py  mixed_log.py  numpy_utils.py  print_utils.py  socket_timestamping.py  time_provider.py  time_range.py  trace.py  transport_utils.py
python/tests/: test_config.py  test_construct_utils.py  test_data_loader.py  test_decoder.py  test_encoder.py  test_enum_utils.py  test_file_index.py  test_file_reader.py  test_log.py  test_message_defs.py  test_mixed_log_reader.py  test_p1_capture.py  test_reference.py  test_signal_defs.py  test_time_provider.py  test_time_range.py  test_timestamp.py
scripts/: tag_release.sh
src/point_one/fusion_engine/common/: logging.cc  logging.h  portability.h  version.h
src/point_one/fusion_engine/messages/: configuration.h  control.h  core.h  crc.cc  crc.h  data_version.cc  data_version.h  defs.h  device.h  fault_control.h  gnss_corrections.h  measurements.h  ros.h  signal_defs.h  solution.h  st5635.h  sta5635.h  timestamp.h  timestamp_test.cc  uart_to_st5635.h
src/point_one/fusion_engine/parsers/: fusion_engine_framer.cc  fusion_engine_framer.h
src/point_one/fusion_engine/utils/: time_provider.cc  time_provider.h  time_provider_test.cc
src/point_one/messages/: core.h  crc.cc  crc.h  defs.h  solution.h  utils.cc  utils.h
src/point_one/rtcm/: crc.h  rtcm_framer.cc  rtcm_framer.h
wasm/: CMakeLists.txt  binding_utils.h  build.sh  command_control_bindings.cc  configuration_bindings.cc  defs_binding.cc  device_binding.cc  example.html  fault_bindings.cc  fusion_engine_framer_binding.cc  gnss_corrections_bindings.cc  measurements_binding.cc  ros_bindings.cc  setup_env.sh  signal_defs_bindings.cc  solution_binding.cc  test.html
wireshark/: p1_fusion_engine_dissector.lua
